loopfor.LoopFor.scala.code
var nbPas=-1
var dejafait=0


while (estSurBiscuit()==false){
  avance()
  nbPas=nbPas+1
}
prendBiscuit()
for (dejaFait<-0 to nbPas){
	recule()
}